[package]
name = "pyapp"
version = "0.16.0"
description = "Runtime installer for Python applications"
repository = "https://github.com/ofek/pyapp"
documentation = "https://ofek.dev/pyapp/"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
bzip2 = "0.4.4"
clap = { version = "4.2.5", features = ["derive"] }
directories = "5.0.0"
flate2 = "1.0.26"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
once_cell = "1.17.1"
os_pipe = "1.1.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
tar = "0.4.38"
tempfile = "3.5.0"
zip = { version = "0.6.4", features = ["deflate"] }
zstd = "0.13.0"

[build-dependencies]
base64 = "0.21.2"
flate2 = "1.0.26"
highway = "1.0.0"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
tar = "0.4.38"
zip = { version = "0.6.4", features = ["deflate"] }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1

[package.metadata.cross.build.env]
passthrough = [
  "PYAPP_DISTRIBUTION_EMBED",
  "PYAPP_DISTRIBUTION_FORMAT",
  "PYAPP_DISTRIBUTION_PATH",
  "PYAPP_DISTRIBUTION_PIP_AVAILABLE",
  "PYAPP_DISTRIBUTION_PYTHON_PATH",
  "PYAPP_DISTRIBUTION_SITE_PACKAGES_PATH",
  "PYAPP_DISTRIBUTION_SOURCE",
  "PYAPP_DISTRIBUTION_VARIANT",
  "PYAPP_EXEC_CODE",
  "PYAPP_EXEC_MODULE",
  "PYAPP_EXEC_NOTEBOOK",
  "PYAPP_EXEC_SCRIPT",
  "PYAPP_EXEC_SPEC",
  "PYAPP_EXPOSE_METADATA",
  "PYAPP_EXPOSE_PIP",
  "PYAPP_EXPOSE_PYTHON",
  "PYAPP_EXPOSE_PYTHON_PATH",
  "PYAPP_FULL_ISOLATION",
  "PYAPP_IS_GUI",
  "PYAPP_METADATA_TEMPLATE",
  "PYAPP_PASS_LOCATION",
  "PYAPP_PIP_ALLOW_CONFIG",
  "PYAPP_PIP_EXTERNAL",
  "PYAPP_PIP_EXTRA_ARGS",
  "PYAPP_PIP_VERSION",
  "PYAPP_PROJECT_DEPENDENCY_FILE",
  "PYAPP_PROJECT_FEATURES",
  "PYAPP_PROJECT_NAME",
  "PYAPP_PROJECT_PATH",
  "PYAPP_PROJECT_VERSION",
  "PYAPP_PYTHON_VERSION",
  "PYAPP_SELF_COMMAND",
  "PYAPP_SKIP_INSTALL",
  "PYAPP_UPGRADE_VIRTUALENV",
]
